Начал делать регистрационную страницу

--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -1,2 +1,11 @@
+html
+  min-height: 100%
+  font-family: "Neue Machina", sans-serif
+  height: 100%
+
+body
+  font-family: inherit
+  background: white
+
 .title
-  font-size: 33px
+  font-family: "Neue Machina", sans-serif
