--- a/src/components/RegistraionForm/ThemeSwitcher/ThemeSwitcher.module.sass
+++ b/src/components/RegistraionForm/ThemeSwitcher/ThemeSwitcher.module.sass
@@ -1,9 +1,12 @@
 .root
   position: relative
-  width: 40px
-  height: 40px
-  border-radius: 50%
-
+  width: 42px
+  height: 36px
+  border-radius: 15%
+  border: none
+  outline: none
+  background: var(--c-bg-reg)
+  cursor: pointer
 
 .sun,
 .moon
