--- a/src/pages/Registration/Registration.module.sass
+++ b/src/pages/Registration/Registration.module.sass
@@ -3,11 +3,12 @@
   height: 100vh
   display: flex
   flex-direction: row
+  background: var(--c-bg-reg)
 
 .rightBlock
   width: 50vw
   height: 100vh
-  background: url("./Bg1.svg") white
+  background: url("./Bg1.svg") var(--c-bg-reg)
   background-size: cover
   background-position-y: center
   object-fit: cover
