--- a/src/pages/RegistrationPage/RegistrationPage.module.sass
+++ b/src/pages/RegistrationPage/RegistrationPage.module.sass
@@ -5,7 +5,25 @@
   flex-direction: row
   background: var(--c-bg-reg)
 
+.themeSwitcher
+  position: absolute
+  top: 13px
+  left: 21px
+
+.license
+  position: absolute
+  bottom: 15px
+  left: 21px
+  font-family: 'Lato', sans-serif
+  font-style: normal
+  font-weight: 400
+  font-size: 12px
+  line-height: 14px
+  color: var(--c-text)
+  opacity: 0.5
+
 .rightBlock
+  position: relative
   width: 50vw
   height: 100vh
   background: url("./Bg1.svg") var(--c-bg-reg)
