--- a/src/components/ThemeSwitcherBtn/ThemeSwitcherBtn.module.sass
+++ b/src/components/ThemeSwitcherBtn/ThemeSwitcherBtn.module.sass
@@ -1,4 +1,4 @@
-.root
+.auth
   position: relative
   width: 42px
   height: 36px
@@ -8,6 +8,15 @@
   background: var(--c-bg-reg)
   cursor: pointer
 
+.main
+  position: relative
+  width: 100%
+  height: 100%
+  border-radius: 100%
+  border: none
+  outline: none
+  background: var(--c-bg-reg)
+  cursor: pointer
 .sun,
 .moon
   position: absolute
@@ -19,6 +28,16 @@
   transition: transform
   transition-duration: 300ms
 
+.sun__main,
+.moon__main
+  position: absolute
+  top: 50%
+  left: 50%
+  width: 50%
+  height: 50%
+  transform: translate(-50%, -50%)
+  transition: transform
+  transition-duration: 300ms
 
 .sun
   transform: translate(-50%, -50%) scale(0) rotate(180deg)
