--- a/src/components/VIdeoPlayer/VideoPlayer.module.sass
+++ b/src/components/VIdeoPlayer/VideoPlayer.module.sass
@@ -3,7 +3,7 @@
   overflow: hidden
   width: 800px
   height: 450px
-  z-index: 1000
+  z-index: 100
 
 .controls
   position: absolute
@@ -12,6 +12,45 @@
   bottom: 3px
   left: 6px
   right: 6px
+  z-index: 99999999
+  width: 100%
+  height: 100%
+
+  > div:first-child
+    display: flex
+    justify-content: center
+    > button
+      font-size: 1.5rem
+      color: #fff
+      margin-right: 3px
+      outline: none
+      opacity: 0.6
+      transition: opacity 0.2s ease-in-out
+      &:hover
+        opacity: 1
+    .playButton
+      font-size: 1.5rem
+    .timeControls
+      display: flex
+      align-items: center
+      color: white
+      margin-left: 4px
+      opacity: 0.6
+      > p:nth-child(2)
+        margin: 4px
+  > div:last-child
+    display: flex
+    align-items: center
+    > button
+      color: white
+      font-size: 1.5rem
+      outline: none
+      opacity: 0.6
+      transition: opacity 0.2s ease-in-out
+      &:hover
+        opacity: 1
+
+
 
 .progressBarContainer
   position: absolute
