--- a/src/pages/CoursesPage/CoursesPage.module.sass
+++ b/src/pages/CoursesPage/CoursesPage.module.sass
@@ -1,3 +1,26 @@
 .wrapper
     width: 100%
-    
+
+.container
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: flex-start
+
+.btn
+    outline: none
+    padding: 8px 20px
+    cursor: pointer
+    background: #53CDF3
+    border: none
+    border-radius: 15px
+    text-align: center
+    font-family: 'Lato', sans-serif
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    line-height: 19px
+    color: var(--c-text)
+    box-shadow: 0 5px 4px rgba(0, 0, 0, 0.25)
+    margin-top: 20px
+    margin-right: 40px
