что-то опять поделал

--- a/src/components/Course/CreateCourse/CreateCourse.module.sass
+++ b/src/components/Course/CreateCourse/CreateCourse.module.sass
@@ -96,3 +96,14 @@
 
 .closeBtn__path
   stroke: var(--c-text)
+
+.errorText
+  color: red
+  font-size: 12px
+  margin-top: 8px
+  margin-bottom: -8px
+
+.errorInput
+  border: 1px solid red
+  &:focus
+    border: 1px solid red
