added many files

--- a/src/components/Layouts/MainLayout/MainLayout.module.sass
+++ b/src/components/Layouts/MainLayout/MainLayout.module.sass
@@ -11,8 +11,9 @@
   overflow: scroll
 
 .spinner
-  width: 100%
+  width: 400px
   height: 100%
   display: flex
   justify-content: center
   align-items: center
+  margin: 0 auto
