--- a/src/components/Course/CreateCourse/CreateCourse.module.sass
+++ b/src/components/Course/CreateCourse/CreateCourse.module.sass
@@ -107,3 +107,10 @@
   border: 1px solid red
   &:focus
     border: 1px solid red
+
+.wrapper__spinner
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 100%
+  height: 100%
