--- a/src/modules/AuthModule/LoginForm/LoginForm.module.sass
+++ b/src/modules/AuthModule/LoginForm/LoginForm.module.sass
@@ -120,6 +120,15 @@
   &__input
     border: 1px solid red
 
+.wrapper__spinner
+  width: 200px
+  height: 100px
+  margin: 0 auto
+  display: flex
+  align-items: center
+  justify-content: center
+
 @media (max-width: 768px)
   .root
     width: 100vw
+
