--- a/src/pages/CoursePages/CoursesPage.module.sass
+++ b/src/pages/CoursePages/CoursesPage.module.sass
@@ -24,3 +24,10 @@
     box-shadow: 0 5px 4px rgba(0, 0, 0, 0.25)
     margin-top: 20px
     margin-right: 40px
+
+.wrapper__spinner
+    width: 300px
+    height: 100%
+    display: flex
+    align-items: center
+    justify-content: center
