--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -22,6 +22,8 @@ body
   --main-title: #131313
   --main-btn-bg: #d3d3d3
 
+  --course-input-bg: #999999
+
 :global(body.darkTheme)
   --c-text: white
   --c-bg-reg: black
@@ -34,3 +36,5 @@ body
   --main-card-text: #FFFFFF
   --main-title: #ECECEC
   --main-btn-bg: #2C2C2C
+
+  --course-input-bg: #464646
