сделал что-то полезное

--- a/src/modules/CourseMainViewModule/CourseMainView/CourseMainView.module.sass
+++ b/src/modules/CourseMainViewModule/CourseMainView/CourseMainView.module.sass
@@ -4,3 +4,13 @@
   display: flex
   align-items: center
   justify-content: center
+
+.blur
+  display: flex
+  align-items: center
+  justify-content: center
+  background: rgba(255, 255, 255, 0.2)
+  backdrop-filter: blur(8px)
+  height: 100vh
+  width: 100%
+  z-index: 100
