--- a/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
+++ b/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
@@ -3,9 +3,51 @@
   color: red
 
 .container
-  width: 600px
+  display: flex
+  flex-direction: column
+  width: 100%
   height: 300px
 
 .comment
   font-size: 16px
   color: var(--c-text)
+
+.header
+  display: flex
+  justify-content: space-between
+  align-items: center
+  margin-bottom: 10px
+  margin-right: 30px
+
+.btn
+  padding: 10px 20px
+  border-radius: 10px
+  color: var(--c-text)
+  background: #967FC6
+  outline: none
+  border: none
+  margin-top: 10px
+
+.title
+  font-size: 30px
+  color: var(--c-text)
+
+.description
+  margin-top: 20px
+  font-size: 16px
+  color: var(--c-text)
+  display: flex
+  flex-direction: column
+  margin-right: 20px
+  padding-top: 5px
+  border-top: 1px solid var(--main-left-bg)
+
+  &__wrapper
+    display: flex
+    width: 100%
+    justify-content: flex-end
+
+.video
+  width: 80%
+  height: 400px
+  object-fit: contain
