--- a/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
+++ b/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
@@ -19,14 +19,7 @@
   margin-bottom: 10px
   margin-right: 30px
 
-.btn
-  padding: 10px 20px
-  border-radius: 10px
-  color: var(--c-text)
-  background: #967FC6
-  outline: none
-  border: none
-  margin-top: 10px
+
 
 .title
   font-size: 30px
@@ -47,7 +40,17 @@
     width: 100%
     justify-content: flex-end
 
-.video
-  width: 80%
+.wrapper__video
+  display: flex
+  justify-content: center
+  width: 100%
   height: 400px
-  object-fit: contain
+  margin-right: 40px
+
+.video
+  width: 95%
+  height: 100%
+  object-fit: scale-down
+  background: #212121
+  border: 1px solid var(--main-left-bg)
+  border-radius: 20px
