--- a/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
+++ b/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
@@ -44,7 +44,7 @@
   display: flex
   justify-content: center
   width: 100%
-  height: 400px
+  min-height: 400px
   margin-right: 40px
 
 .video
@@ -54,3 +54,7 @@
   background: #212121
   border: 1px solid var(--main-left-bg)
   border-radius: 20px
+
+.uploader
+  width: 100%
+  margin-right: 20px
