--- a/src/modules/LessonMainViewModule/components/UploaderVideo/UploaderVideo.module.sass
+++ b/src/modules/LessonMainViewModule/components/UploaderVideo/UploaderVideo.module.sass
@@ -4,9 +4,13 @@
 
 .drag
   width: 100%
-  height: 300px
-  border: 1px solid white
+  height: 400px
+  border: 3px dotted var(--c-text)
   position: relative
+  display: flex
+  align-items: center
+  justify-content: center
+  border-radius: 12px
 
 .input
   position: absolute
@@ -19,14 +23,49 @@
   right: 0
   bottom: 0
 
+.title
+  font-size: 20px
+  font-weight: 600
+  color: var(--c-text)
+  margin-bottom: 20px
+
 .progress
   width: 100%
   margin-right: 30px
   border-radius: 20px
   border: 1px solid red
   height: 10px
+
   &__line
     width: 0
     height: 100%
     background-color: red
     border-radius: 20px
+
+.btn
+  padding: 10px 20px
+  border-radius: 10px
+  color: var(--c-text)
+  background: #967FC6
+  outline: none
+  border: none
+  margin-top: 10px
+  &__red
+    background: red
+
+.information
+  padding-top: 20px
+  width: 100%
+  height: 400px
+
+.description
+  display: flex
+  flex-direction: column
+  gap: 20px
+  color: var(--c-text)
+
+.controls
+  display: flex
+  justify-content: space-between
+  align-items: center
+  width: 250px
