--- a/src/modules/CourseMainViewModule/CourseMainView/CourseMainView.module.sass
+++ b/src/modules/CourseMainViewModule/CourseMainView/CourseMainView.module.sass
@@ -14,3 +14,12 @@
   height: 100vh
   width: 100%
   z-index: 100
+
+.btn
+  padding: 10px 20px
+  border-radius: 10px
+  color: var(--c-text)
+  background: #967FC6
+  outline: none
+  border: none
+  margin-top: 10px
