--- a/src/modules/CourseMainViewModule/components/CourseInformation/CourseInformation.module.sass
+++ b/src/modules/CourseMainViewModule/components/CourseInformation/CourseInformation.module.sass
@@ -1,8 +1,17 @@
 .root
-  width: 600px
+  width: 100%
   display: flex
+  flex-direction: row
+
+.left
+  display: flex
+  flex: 2
   flex-direction: column
-  gap: 20px
+  gap: 10px
+
+.right
+  display: flex
+  flex: 1
 
 .title
   font-size: 34px
@@ -10,8 +19,8 @@
   color: var(--c-text)
 
 .wrapper__text
+  width: 300px
   color: var(--c-text)
-  width: 600px
   font-size: 16px
   word-wrap: break-word
 
