--- a/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
+++ b/src/modules/LessonMainViewModule/LessonMainView/LessonMainView.module.sass
@@ -20,7 +20,6 @@
   margin-right: 30px
 
 
-
 .title
   font-size: 30px
   color: var(--c-text)
@@ -49,7 +48,7 @@
 
 .video
   width: 95%
-  height: 100%
+  height: 360px
   object-fit: scale-down
   background: #212121
   border: 1px solid var(--main-left-bg)
