пофиксил ошибки и изменил че-то

--- a/src/modules/CoursesListModule/components/CoursesItem/CoursesItem.module.sass
+++ b/src/modules/CoursesListModule/components/CoursesItem/CoursesItem.module.sass
@@ -31,3 +31,13 @@
     font-size: 14px
     color: var(--c-text)
     font-weight: 400
+  &__teacher
+    padding-top: 5px
+    width: 100%
+    border: none
+    border-top: 1px solid var(--c-text)
+    font-size: 14px
+    color: var(--c-text)
+    font-weight: 400
+    display: flex
+    justify-content: space-between
