--- a/src/pages/ChatPage/ChatPage.module.sass
+++ b/src/pages/ChatPage/ChatPage.module.sass
@@ -1,13 +1,21 @@
+.root
+  width: 100%
+
 .chat
   width: 100%
   height: 100%
   display: flex
   flex-direction: row
+  justify-content: space-between
+  margin-top: 20px
 
 .leftSide
   display: flex
+  flex-direction: column
+  gap: 20px
   flex: 1
 
 .rightSide
   display: flex
-  flex: 2
+  flex: 3
+  justify-content: flex-end
