добавил несколько фишек

--- a/src/pages/ChatPage/ChatPage.module.sass
+++ b/src/pages/ChatPage/ChatPage.module.sass
@@ -14,8 +14,26 @@
   flex-direction: column
   gap: 20px
   flex: 1
+  overflow: scroll
+  max-height: 80vh
+  padding-right: 20px
+  &_empty
+    display: flex
+    flex-direction: column
+    gap: 20px
+    flex: 1
+    overflow: scroll
+    max-height: 80vh
+    padding-right: 20px
+    align-items: center
+    font-size: 24px
+    color: var(--c-text)
 
 .rightSide
   display: flex
   flex: 3
   justify-content: flex-end
+
+
+
+
