--- a/src/pages/ChatPage/BlockUser/BlockUser.module.sass
+++ b/src/pages/ChatPage/BlockUser/BlockUser.module.sass
@@ -16,6 +16,12 @@
   background: red
   border: none
 
+.logo
+  border: none
+  border-radius: 100%
+  height: 50px
+  width: 50px
+
 .description
   display: flex
   flex-direction: column
