--- a/src/pages/ChatPage/ChatBox/ChatBox.module.sass
+++ b/src/pages/ChatPage/ChatBox/ChatBox.module.sass
@@ -1,5 +1,5 @@
 .root
-  max-height: 85vh
+  max-height: 80vh
   width: 95%
   background: var(--main-left-bg)
   border-radius: 1rem
@@ -35,6 +35,17 @@
   padding: 1.5rem
   overflow: scroll
   height: 100vh
+  &_empty
+    display: flex
+    flex-direction: column
+    gap: 0.5rem
+    padding: 1.5rem
+    overflow: scroll
+    height: 100vh
+    align-items: center
+    justify-content: center
+    font-size: 28px
+    color: var(--c-text)
 
 .message
   background: black
@@ -73,7 +84,18 @@
   border-radius: 12px
   padding: 5px 12px 5px 15px
   font-size: 16px
+.img
+  height: 50px
+  width: 50px
+  border-radius: 100%
+  background: red
+  border: none
 
+.logo
+  border: none
+  border-radius: 100%
+  height: 50px
+  width: 50px
 .btn
   padding: 7px 10px
   border-radius: 12px
