--- a/src/modules/ChatMainViewModule/components/SearchUserBlock/SearchUserBlock.module.sass
+++ b/src/modules/ChatMainViewModule/components/SearchUserBlock/SearchUserBlock.module.sass
@@ -33,7 +33,7 @@
   z-index: 1
   top: 3.8em
   left: 1em
-  flex-direction: column
+  flex-direction: row
   flex-wrap: wrap
   justify-content: flex-start
   width: calc(100% - 2em)
@@ -54,7 +54,7 @@
     top: 3.8em
     left: 1em
     align-items: center
-    flex-direction: column
+    flex-direction: row
     flex-wrap: wrap
     justify-content: center
     color: var(--c-text)
@@ -76,8 +76,41 @@
   animation: appear 500ms ease
 
 .item
+  display: flex
+  flex-direction: row
+  border-radius: 1rem
+  gap: 10px
   cursor: pointer
   font-size: 16px
+  align-items: center
+  padding: 6px
+  border: 1px solid var(--c-text)
+  max-width: 350px
+
+.img
+  height: 30px
+  width: 30px
+  border-radius: 100%
+  background: red
+  border: none
+
+.logo
+  border: none
+  border-radius: 100%
+  height: 30px
+  width: 30px
+
+.description
+  display: flex
+  flex-direction: column
+  gap: 5px
+  color: var(--c-text)
+
+.name
+  font-size: 14px
+
+.role
+  font-size: 12px
 
 @keyframes appear
   0%
