--- a/src/modules/CoursesListModule/components/CoursesItem/CoursesItem.module.sass
+++ b/src/modules/CoursesListModule/components/CoursesItem/CoursesItem.module.sass
@@ -32,6 +32,7 @@
     color: var(--c-text)
     font-weight: 400
   &__teacher
+    align-items: center
     padding-top: 5px
     width: 100%
     border: none
@@ -41,3 +42,16 @@
     font-weight: 400
     display: flex
     justify-content: space-between
+
+.img
+  height: 50px
+  width: 50px
+  border-radius: 100%
+  background: red
+  border: none
+
+.logo
+  border: none
+  border-radius: 100%
+  height: 50px
+  width: 50px
