немного добавил адаптив

--- a/src/components/Layouts/MainLayout/MainLayout.module.sass
+++ b/src/components/Layouts/MainLayout/MainLayout.module.sass
@@ -17,3 +17,10 @@
   justify-content: center
   align-items: center
   margin: 0 auto
+
+@media screen and (max-width: 768px)
+  .root
+    flex-direction: column
+
+  .main
+    margin-top: -15px
