--- a/src/modules/ChatMainViewModule/components/BlockUser/BlockUser.module.sass
+++ b/src/modules/ChatMainViewModule/components/BlockUser/BlockUser.module.sass
@@ -8,7 +8,7 @@
   cursor: pointer
   gap: 10px
   align-items: center
-
+  min-width: 230px
 .img
   height: 50px
   width: 50px
@@ -55,3 +55,7 @@
   border: none
   background: grey
   margin-right: 5px
+
+@media screen and (max-width: 768px)
+  .root
+    min-width: 300px
