--- a/src/modules/CourseMainViewModule/components/ListLessons/ListLessons.module.sass
+++ b/src/modules/CourseMainViewModule/components/ListLessons/ListLessons.module.sass
@@ -1,8 +1,9 @@
 .root
-  width: 400px
+  max-width: 400px
   display: flex
   flex-direction: column
   gap: 12px
+  margin-top: 20px
 
 .block
   display: flex
