--- a/src/pages/CoursePages/CoursesPage/CoursesPage.module.sass
+++ b/src/pages/CoursePages/CoursesPage/CoursesPage.module.sass
@@ -6,6 +6,7 @@
     flex-direction: row
     justify-content: space-between
     align-items: flex-start
+    margin-top: 20px
 
 .btn
     outline: none
@@ -31,3 +32,7 @@
     display: flex
     align-items: center
     justify-content: center
+
+@media screen and (max-width: 768px)
+    .container
+        flex-direction: column
