--- a/src/components/LeftSidebar/LeftSidebar.module.sass
+++ b/src/components/LeftSidebar/LeftSidebar.module.sass
@@ -74,3 +74,41 @@
       path
         stroke: var(--main-left-path)
 
+@media screen and (max-width: 768px)
+  .root
+    width: 100%
+    height: 101px
+    padding: 15px 9px 15px 30px
+
+  .wrapper
+    flex-direction: row
+    padding: 0 20px 0 20px
+    align-items: center
+
+  .menu
+    flex-direction: row
+    margin-top: 0
+    justify-content: space-around
+    gap: 0
+    &__item
+      width: 31px
+      height: 32px
+      position: relative
+    &__link
+      position: relative
+      &_active
+        .menu__icon
+          path
+            fill: var(--main-left-path)
+        &:before
+          content: ''
+          right: 0
+          left: 0
+          position: absolute
+          width: 32px
+          height: 3px
+          background: var(--main-left-path)
+          top: -15px
+          border-radius: 10px
+          cursor: default
+          pointer-events: none
