--- a/src/modules/ChatMainViewModule/ChatMainView/ChatMainView.module.sass
+++ b/src/modules/ChatMainViewModule/ChatMainView/ChatMainView.module.sass
@@ -32,3 +32,13 @@
   justify-content: flex-end
 
 
+@media screen and (max-width: 768px)
+  .chat
+    flex-direction: column
+
+  .rightSide
+    margin-top: 20px
+
+  .leftSide
+    flex-direction: row
+    padding-bottom: 10px
