--- a/src/modules/ChatMainViewModule/components/ChatBox/ChatBox.module.sass
+++ b/src/modules/ChatMainViewModule/components/ChatBox/ChatBox.module.sass
@@ -154,6 +154,7 @@
   border: none
   background: transparent
   cursor: pointer
+  margin-left: 10px
 
 .container
   position: relative
@@ -162,3 +163,25 @@
     bottom: 30px
     right: -110px
     transform: translateY(-30px)
+
+.senderWrapper
+  width: 100%
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+
+@media screen and (max-width: 768px)
+  .root
+    width: 100%
+    margin-right: 16px
+
+  .rightSide
+    margin-top: 20px
+
+@media screen and (max-width: 436px)
+  .sender
+    display: flex
+    flex-direction: column
+    width: 100%
+    padding: 10px 15px
+    gap: 10px
